changed modal text from paragraphs to ordered lists

--- a/index.html
+++ b/index.html
@@ -60,20 +60,26 @@
                 </div>
                 <div class="modal-body">
                     <h6 class="modal-title">Dealing</h6>
-                    <p>1) To start the game, click on the start game button
-                        <br>2) The aim of Blackjack is to get your cards to add up to 21
-                        <br>3) Jack/Queen/King count as 10
-                        <br>4) Aces count as 1 or 11 depending on the sum of your hand
-                        <br>5) If you have an ace and a card with a value of 10 that's a Blackjack and you win!</p>
+                    <ol>
+                        <li>To start the game, click on the start game button</li>
+                        <li>The aim of Blackjack is to get your cards to add up to 21</li>
+                        <li>Jack/Queen/King count as 10</li>
+                        <li>Aces count as 1 or 11 depending on the sum of your hand</li>
+                        <li>If you have an ace and a card with a value of 10 that's a Blackjack and you win!</li>
+                    </ol>
                     <h6 class="modal-title">Hit or stand</h6>
-                    <p>1) Once the initial hands have been dealt, without a Blackjack, the game moves to phase two
-                        <br>2) You now have a choice to hit (add another card to your hand) or stand
-                        <br>3) It's a good idea to look at the dealer's shown card and strategize
-                        <br>4) Once you are happy with your hand you can stand and the winner is decided</p>
+                    <ol>
+                        <li>Once the initial hands have been dealt, without a Blackjack, the game moves to phase two</li>
+                        <li>You now have a choice to hit (add another card to your hand) or stand</li>
+                        <li>It's a good idea to look at the dealer's shown card and strategize</li>
+                        <li>Once you are happy with your hand you can stand and the winner is decided</li>
+                    </ol>
                     <h6 class="modal-title">Deciding the winner</h6>
-                    <p>1) Before deciding the winner the dealer must hit or stand
-                        <br>2) The dealer has to hit on 16
-                        <br>3) Once the dealer has finished the player with the highest hand under 21 wins!</p>
+                    <ol>
+                        <li>Before deciding the winner the dealer must hit or stand</li>
+                        <li>The dealer has to hit on 16</li>
+                        <li>Once the dealer has finished the player with the highest hand under 21 wins!</li>
+                    </ol>
                 </div>
             </div>
         </div>
