start screen has card image on smaller sizes. lists for rules in modal instead of p. reduced button height on mobile. cleaned javascript code and readme

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="page-header">Welcome to Blackjack</h1>
             </div>
             <div class="row start-game-container justify-content-center">
-                <img src="assets/images/Red_back.jpg" alt="Deck of cards" class="d-none d-sm-block mx-auto"
+                <img src="assets/images/Red_back.jpg" alt="Deck of cards" class="mx-auto" id="homepage-card"
                     height="200">
             </div>
             <div class="row start-game-container justify-content-center">
@@ -41,7 +41,7 @@
         <div class="row justify-content-center d-none" id="player-hand"></div>
 
         <!-- Contact form alert -->
-        <div class="alert alert-info fixed-bottom" role="alert">
+        <div class="alert alert-info fixed-bottom text-center" role="alert">
             Noticed a bug while playing or just want to ask a question? <a href="contact.html" class="alert-link">Click
                 here to contact us</a>
         </div>
