--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home | Blackjack</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/80fd661972.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 
@@ -33,7 +34,9 @@
         <div class="row justify-content-center d-none" id="dealer-hand"></div>
         <p class="scores d-none">Dealer hands won: <span id="dealer-h-won">0</span></p>
         <div class="row score-choice-deck-container d-none">
-            <div class="col-4 score-keeper"></div>
+            <div class="col-4 score-keeper">
+                <a href="index.html" class="home-link fixed-top" aria-label="Home"><i class="fas fa-home"></i></a>
+            </div>
             <div class="col-4 choice-area d-flex justify-content-center"></div>
             <div class="col-4"></div>
         </div>
